AB#87 Rename "list"-page to "programs"-page
To test the testing-pipeline

--- a/interfaces/HO-Portal/src/app/programs/programs.page.html
+++ b/interfaces/HO-Portal/src/app/programs/programs.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      List
+      All Programs
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -19,9 +19,4 @@
       </div>
     </ion-item>
   </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
 </ion-content>
