--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -8,11 +8,17 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item [routerDirection]="'root'" routerLink="/home">
+              <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
-                {{p.title}}
+                Home
+              </ion-label>
+            </ion-item>
+            <ion-item [routerDirection]="'root'" routerLink="/programs">
+              <ion-icon slot="start" name="list"></ion-icon>
+              <ion-label>
+                All Programs
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
