Make texts translatable
+ Add initial EN an NL labels
+ Workaround to be able to run tests and not test translating

--- a/interfaces/HO-Portal/src/app/programs/programs.page.html
+++ b/interfaces/HO-Portal/src/app/programs/programs.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      All Programs
+      {{ 'PROGRAMS'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
