--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title>{{ 'MENU'|translate }}</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -12,13 +12,13 @@
             <ion-item [routerDirection]="'root'" routerLink="/home">
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
-                Home
+                {{ 'HOME'|translate }}
               </ion-label>
             </ion-item>
             <ion-item [routerDirection]="'root'" routerLink="/programs">
               <ion-icon slot="start" name="list"></ion-icon>
               <ion-label>
-                All Programs
+                {{ 'PROGRAMS'|translate }}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
