--- a/interfaces/HO-Portal/src/app/home/home.page.html
+++ b/interfaces/HO-Portal/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      {{ 'HOME'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
