--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -25,11 +25,11 @@
         </ion-list>
 
         <div style="position: absolute; bottom: 0; left: 0; right: 0; top: auto;">
-          <ion-segment (ionChange)="switchLanguage($event)">
+          <ion-segment (ionChange)="switchLanguage($event)" [value]="currentLanguage">
             <ion-segment-button value="nl">
               <ion-label>NL</ion-label>
             </ion-segment-button>
-            <ion-segment-button value="en" checked>
+            <ion-segment-button value="en">
               <ion-label>EN</ion-label>
             </ion-segment-button>
           </ion-segment>
