--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="top">
     <ion-tab-button tab="tab1">
       <ion-icon name="globe"></ion-icon>
       <ion-label>{{ 'WORLD'|translate }}</ion-label>
