Tweak colors to align with 121 branding more

--- a/interfaces/PA-App/src/theme/variables.scss
+++ b/interfaces/PA-App/src/theme/variables.scss
@@ -52,20 +52,20 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
+  --ion-color-dark: #001e60;;
+  --ion-color-dark-rgb: 0, 30, 96;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark-shade: #001138;;
+  --ion-color-dark-tint: #002370;
 
   /** medium **/
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152, 154, 162;
+  --ion-color-medium: #cccccc;
+  --ion-color-medium-rgb: 204, 204, 204;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
+  --ion-color-medium-shade: #aaaaaa;
+  --ion-color-medium-tint: #eeeeee;
 
   /** light **/
   --ion-color-light: #f4f5f8;
