--- a/interfaces/PA-App/src/app/tab2/tab2.page.html
+++ b/interfaces/PA-App/src/app/tab2/tab2.page.html
@@ -7,6 +7,14 @@
 </ion-header>
 
 <ion-content color="medium" class="ion-padding-vertical">
+
+  <details class="debug--container" *ngIf="isDebug">
+    <summary class="debug--toggle">DEBUG:</summary>
+
+    ...
+
+  </details>
+
   <dialogue-turn>
     Introduction.
   </dialogue-turn>
