--- a/interfaces/PA-App/src/app/tab2/tab2.page.html
+++ b/interfaces/PA-App/src/app/tab2/tab2.page.html
@@ -17,7 +17,7 @@
   </details>
 
   <dialogue-turn>
-    <ion-button (click)="getCountries()">Test Get Countries API</ion-button>
+    <ion-button id="debugGetCountries" (click)="getCountries()">Test Get Countries API</ion-button>
   </dialogue-turn>
   <dialogue-turn actor="self">
     Select a country:
