--- a/interfaces/PA-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.scss
@@ -14,7 +14,7 @@ ion-tab-button {
     }
   }
 
-  &#tab-button-tab2 {
+  &#tab-button-personal {
     color: var(--ion-color-primary-contrast);
     background: var(--ion-color-primary-tint);
 
