--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -30,10 +30,9 @@
   </dialogue-turn>
 
   <dialogue-turn>
-    <ion-button (click)="getProgramsByCountryId(countryChoice)"
-      >Test Programs API</ion-button
-    >
+    <ion-button (click)="getProgramsByCountryId(countryChoice)">Test Programs API</ion-button>
   </dialogue-turn>
+
   <dialogue-turn actor="self">
     Select a program:
     <ion-radio-group>
