--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>{{ 'WORLD'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="personal">
       <ion-icon name="body"></ion-icon>
       <ion-label>{{ 'PERSONAL'|translate }}</ion-label>
     </ion-tab-button>
