--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      Tab Two
+      {{ 'PERSONAL'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
