use ionic/storage for output/input components

--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -7,8 +7,7 @@
   <dialogue-turn actor="self">
     I'm currently located in:
 
-    <ion-radio-group [(ngModel)]="countryChoice"
-                     (ionChange)="setCountryChoiceName(countryChoice)"
+    <ion-radio-group (ionChange)="changeCountry($event)"
     >
       <ion-item *ngFor="let country of countries"
                 color="light"
