--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -24,6 +24,11 @@
 
         <ng-content></ng-content>
 
+        <ion-note class="ion-float-end ion-text-end ion-margin-top"
+                  [color]="isSelf ? '' : 'light'"
+        >
+          <small>{{ moment|date:"EEEE, d LLL" }} - <strong>{{ moment|date:"hh:mm" }}</strong></small>
+        </ion-note>
       </ion-card-content>
     </ion-card>
 
