AB#513 get-info button for 'tell me about 121'

--- a/interfaces/PA-App/src/app/personal-components/get-info/get-info.component.html
+++ b/interfaces/PA-App/src/app/personal-components/get-info/get-info.component.html
@@ -3,6 +3,7 @@
     {{ 'personal.get-info.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
+    <ion-button>{{ 'personal.get-info.option1'|translate }}</ion-button>
     <ion-radio-group>
       <ion-item *ngFor="let option of infoOptions"
                 color="light"
@@ -13,7 +14,4 @@
       </ion-item>
     </ion-radio-group>
   </dialogue-turn>
-  <!-- <dialogue-turn>
-    {{ 'personal.select-language.result'|translate }} {{languageChoiceName}}.
-  </dialogue-turn> -->
 </section>
