AB#513 needs-form input logged (not stored yet)

--- a/interfaces/PA-App/src/app/personal-components/tell-needs/tell-needs.component.html
+++ b/interfaces/PA-App/src/app/personal-components/tell-needs/tell-needs.component.html
@@ -3,8 +3,10 @@
       {{ 'personal.tell-needs.introduction'|translate }}
     </dialogue-turn>
     <dialogue-turn actor="self">
-      <ion-input [placeholder]="inputPlaceholder"></ion-input>
-      <ion-button>{{ 'personal.tell-needs.submit'|translate }}</ion-button>
+      <form (ngSubmit)="submitNeeds(needs)">
+        <ion-input [placeholder]="inputPlaceholder" type="text" name="needs" [(ngModel)]="needs" ngDefaultControl></ion-input>
+        <ion-button type="submit">{{ 'personal.tell-needs.submit'|translate }}</ion-button>
+      </form>
     </dialogue-turn>
   </section>
    
