AB#511 language-conclusion hidden

--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -14,7 +14,7 @@
       </ion-item>
     </ion-radio-group>
   </dialogue-turn>
-  <dialogue-turn>
+  <dialogue-turn [hidden]="!languageChoice">
     {{ 'personal.select-language.result'|translate }} {{languageChoiceName}}.
   </dialogue-turn>
 </section>
