AB#513 hide submit-buttons until input given

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -14,7 +14,7 @@
           <ion-radio value="{{ credentialType.id }}"></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <ion-button (click)="submitCredentialType()">Submit</ion-button>
+      <ion-button [hidden]="!credentialTypeChoice" (click)="submitCredentialType()">Submit</ion-button>
   </dialogue-turn>
   <dialogue-turn [hidden]="!programChosen">
     {{ 'personal.choose-credential-type.conclusion-program'|translate }}
@@ -29,7 +29,7 @@
           <ion-radio value="2"></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <ion-button (click)="submitCredentialTypeNew()">{{ 'shared.submit-button'|translate }}</ion-button>
+      <ion-button [hidden]="!credentialTypeChoiceNew"  (click)="submitCredentialTypeNew()">{{ 'shared.submit-button'|translate }}</ion-button>
   </dialogue-turn>
 </section>
    
