--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -9,7 +9,7 @@
       <form (ngSubmit)="submitPassword(create,confirm)">
         <ion-input type="password" [placeholder]="createPasswordPlaceholder" name="create" [(ngModel)]="create" ngDefaultControl></ion-input>
         <ion-input type="password" [placeholder]="confirmPasswordPlaceholder" name="confirm" [(ngModel)]="confirm" ngDefaultControl></ion-input>
-        <ion-button type="submit">{{ 'personal.create-password.submit-password'|translate }}</ion-button>
+        <ion-button [hidden]="!create || !confirm" type="submit">{{ 'personal.create-password.submit-password'|translate }}</ion-button>
       </form>
     </dialogue-turn>
     <dialogue-turn [hidden]="!passwordCreated">
