AB#537 translatable program-properties

--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -14,9 +14,9 @@
                 class="ion-no-padding ion-text-wrap"
       >
         <ion-label>
-          {{ program.title }}
+          {{ program.title.en }}
           <br>
-          <ion-note>{{ program.description }}</ion-note>
+          <ion-note>{{ program.description.en }}</ion-note>
         </ion-label>
         <ion-radio value="{{ program.id }}"></ion-radio>
       </ion-item>
