--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -1,7 +1,7 @@
 <section>
   <ion-button (click)="getTimeslots()">API: GET Timeslots</ion-button>
   <br>
-  <dialogue-turn actor="ho">
+  <dialogue-turn actor="{{ngo}}">
     {{ 'personal.select-appointment.introduction1'|translate }}
     <br><br>
     {{ 'personal.select-appointment.introduction2'|translate }}
@@ -27,7 +27,7 @@
     <ion-button [hidden]="!timeslotChoice" (click)="submitTimeslot()">{{ 'shared.submit-button'|translate }}</ion-button>
     <br>
   </dialogue-turn>
-  <dialogue-turn [hidden]="!timeslotSubmitted" actor="ho">
+  <dialogue-turn [hidden]="!timeslotSubmitted" actor="{{ngo}}">
     {{ 'personal.select-appointment.conclusion1'|translate }} {{timeslotChoiceName}}.
     <br><br>
     {{ 'personal.select-appointment.conclusion2'|translate }}
@@ -53,7 +53,7 @@
     </ion-radio-group>
     <ion-button [hidden]="!confirmOptionChoice" (click)="submitAppointment(confirmOptionChoice)">{{ 'shared.submit-button'|translate }}</ion-button>
   </dialogue-turn>
-  <dialogue-turn [hidden]="!appointmentConfirmed" actor="ho">
+  <dialogue-turn [hidden]="!appointmentConfirmed" actor="{{ngo}}">
     {{ 'personal.select-appointment.conclusion'|translate }}
   </dialogue-turn>
 </section>
