--- a/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
+++ b/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
@@ -1,4 +1,4 @@
-<section #login>
+<section #viewAppointments>
   <dialogue-turn>
     {{ 'personal.view-appointments.introduction'|translate }}
   </dialogue-turn>
