--- a/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
+++ b/interfaces/AW-App/src/app/personal-components/view-appointments/view-appointments.component.html
@@ -5,15 +5,39 @@
     {{ 'personal.view-appointments.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
-    <ion-radio-group">
+    <ion-radio-group (ionChange)="changeTimeslot($event)">
       <ion-item *ngFor="let appointment of appointments"
                 color="light"
                 class="ion-no-padding ion-text-wrap"
       >
-        <ion-label>{{ appointment[0].timeslotId }}</ion-label>
-        <ion-radio value="{{ appointment[0].id }}"></ion-radio>
+        <ion-label>
+            <ion-label>
+              {{ 'personal.view-appointments.timeslot'|translate }} {{appointment.timeslotId}}:<br>
+              <ion-note>{{appointment.startDate}} - {{appointment.endDate}}</ion-note><br>
+              <ion-note>({{ appointment.location }})</ion-note>
+            </ion-label>
+        </ion-label>
+        <ion-radio value="{{appointment.timeslotId}}"></ion-radio>
       </ion-item>
     </ion-radio-group>
+    <br>
+    <ion-button [hidden]="!timeslotChoice" (click)="submitTimeslot(timeslotChoice)">{{ 'personal.view-appointments.submit-button'|translate }}</ion-button>
+  </dialogue-turn>
+  <dialogue-turn [hidden]="!timeslotSelected">
+    {{ 'personal.view-appointments.appointments'|translate }}
+  </dialogue-turn>
+  <dialogue-turn actor="self" [hidden]="!timeslotSelected">
+    <ion-radio-group (ionChange)="changeAppointment($event)">
+      <ion-item *ngFor="let appointment of appointmentsByTimeslot"
+                color="light"
+                class="ion-no-padding ion-text-wrap"
+      >
+        <ion-label>{{appointment.did}}</ion-label>
+        <ion-radio value="{{appointment.did}}"></ion-radio>
+      </ion-item>
+    </ion-radio-group>
+    <br>
+    <ion-button [hidden]="!appointmentChoice" (click)="submitAppointment(appointmentChoice)">{{ 'personal.view-appointments.submit-button'|translate }}</ion-button>
   </dialogue-turn>
 </section>
    
