AB#555 QR-scanner working

--- a/interfaces/AW-App/src/app/scan-qr/scan-qr.page.html
+++ b/interfaces/AW-App/src/app/scan-qr/scan-qr.page.html
@@ -6,7 +6,7 @@
   </ion-buttons>
 </ion-header>
   
-<ion-content padding style="background:  none transparent;;">
+<ion-content padding style="background: transparent!important">
   <ion-fab bottom right margin style="margin-bottom: 15%;">
     <button ion-fab>
       <ion-icon name="md-options"></ion-icon>
@@ -30,7 +30,7 @@
           </ion-col>
         </ion-row>
       </section>
-  </ion-footer>
-</div>
+    </ion-footer>
+  </div>
 </ion-content>
   
